--- a/API (ASP NET Core)/LoginAppAPI/LoginAppAPI/appsettings.json
+++ b/API (ASP NET Core)/LoginAppAPI/LoginAppAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DatabaseConnection": "Server=DESKTOP-8BESNI3;Database=logintestdb;TrustServerCertificate=True;Trusted_Connection=True"
+  }
 }
